--- a/C1_W2_Linear_Regression.ipynb
+++ b/C1_W2_Linear_Regression.ipynb
@@ -1,4 +1,4 @@
-WEEK 2 ML ASSIGMENT BY AMULYA
+
 
 
 {
@@ -7,6 +7,7 @@ WEEK 2 ML ASSIGMENT BY AMULYA
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#WEEK 2 ML ASSIGMENT BY AMULYA\n"
     "# Practice Lab: Linear Regression\n",
     "\n",
     "Welcome to your first practice lab! In this lab, you will implement linear regression with one variable to predict profits for a restaurant franchise.\n",
